@@ -56,7 +56,8 @@ int
 main(int ac, char **av) {
     enum asn1p_flags asn1_parser_flags = A1P_NOFLAGS;
     enum asn1f_flags asn1_fixer_flags = A1F_NOFLAGS;
-    enum asn1c_flags asn1_compiler_flags = A1C_NO_C99;
+    enum asn1c_flags asn1_compiler_flags =
+        A1C_NO_C99 | A1C_GEN_OER | A1C_GEN_PER | A1C_GEN_EXAMPLE;
     enum asn1print_flags asn1_printer_flags = APF_NOFLAGS;
     int print_arg__print_out = 0;   /* Don't compile, just print parsed */
     int print_arg__fix_n_print = 0; /* Fix and print */
@@ -71,7 +72,7 @@ main(int ac, char **av) {
     /*
      * Process command-line options.
      */
-    while((ch = getopt(ac, av, "EFf:g:hLPp:RS:vW:X")) != -1) switch(ch) {
+    while((ch = getopt(ac, av, "EFf:g:hn:LPp:RS:vW:X")) != -1) switch(ch) {
         case 'E':
             print_arg__print_out = 1;
             break;
@@ -121,6 +122,8 @@ main(int ac, char **av) {
                 asn1_compiler_flags |= A1C_GEN_PER;
             } else if(strcmp(optarg, "en-OER") == 0) {
                 asn1_compiler_flags |= A1C_GEN_OER;
+            } else if(strcmp(optarg, "en-example") == 0) {
+                asn1_compiler_flags |= A1C_GEN_EXAMPLE;
             } else {
                 fprintf(stderr, "-g%s: Invalid argument\n", optarg);
                 exit(EX_USAGE);
@@ -128,6 +131,18 @@ main(int ac, char **av) {
             break;
         case 'h':
             usage(av[0]);
+        case 'n':
+            if(strcmp(optarg, "o-gen-PER") == 0) {
+                asn1_compiler_flags &= ~A1C_GEN_PER;
+            } else if(strcmp(optarg, "o-gen-OER") == 0) {
+                asn1_compiler_flags &= ~A1C_GEN_OER;
+            } else if(strcmp(optarg, "o-gen-example") == 0) {
+                asn1_compiler_flags &= ~A1C_GEN_EXAMPLE;
+            } else {
+                fprintf(stderr, "-n%s: Invalid argument\n", optarg);
+                exit(EX_USAGE);
+            }
+            break;
         case 'P':
             asn1_compiler_flags |= A1C_PRINT_COMPILED;
             asn1_compiler_flags &= ~A1C_NO_C99;
@@ -500,14 +515,15 @@ usage(const char *av0) {
 "  -fincludes-quoted     Generate #includes in \"double\" instead of <angle> quotes\n"
 "  -fknown-extern-type=<name>    Pretend the specified type is known\n"
 "  -fline-refs           Include ASN.1 module's line numbers in comments\n"
-"  -fno-constraints      Do not generate constraint checking code\n"
-"  -fno-include-deps     Do not generate courtesy #includes for dependencies\n"
+"  -fno-constraints      Do not generate the constraint checking code\n"
+"  -fno-include-deps     Do not generate the courtesy #includes for dependencies\n"
 "  -funnamed-unions      Enable unnamed unions in structures\n"
 "  -fwide-types          Use INTEGER_t instead of \"long\" by default, etc.\n"
 "\n"
 
-"  -gen-OER              Generate OER (X.696) support code\n"
-"  -gen-PER              Generate PER (X.691) support code\n"
+"  -no-gen-OER           Do not generate the OER (X.696) support code\n"
+"  -no-gen-PER           Do not generate the PER (X.691) support code\n"
+"  -no-gen-example       Do not generate the ASN.1 format converter example\n"
 "  -pdu={all|auto|Type}  Generate PDU table (discover PDUs automatically)\n"
 "\n"
 
